--- a/MockupProjetoFinal/View/Base.lproj/Main.storyboard
+++ b/MockupProjetoFinal/View/Base.lproj/Main.storyboard
@@ -303,10 +303,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="OHS-l4-MNO">
-                                <rect key="frame" x="87" y="104" width="200" height="40"/>
+                                <rect key="frame" x="40" y="104" width="200" height="419.5"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h2R-Pw-Sae">
-                                        <rect key="frame" x="0.0" y="0.0" width="200" height="40"/>
+                                    <view contentMode="scaleAspectFit" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vhy-wl-Lvs" customClass="GMSMapView">
+                                        <rect key="frame" x="0.0" y="0.0" width="200" height="359"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </view>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h2R-Pw-Sae">
+                                        <rect key="frame" x="0.0" y="359" width="200" height="40"/>
                                         <color key="backgroundColor" red="1" green="0.68118776889999999" blue="0.075253616950000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="W95-oN-wjC"/>
@@ -319,15 +323,26 @@
                                             <action selector="login:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lLz-Wn-z6Y"/>
                                         </connections>
                                     </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Testess" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HIe-gz-0yf">
+                                        <rect key="frame" x="0.0" y="399" width="200" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="OHS-l4-MNO" firstAttribute="top" secondItem="RnS-Yd-ncX" secondAttribute="top" constant="40" id="fh6-RT-BT3"/>
+                            <constraint firstItem="RnS-Yd-ncX" firstAttribute="trailing" secondItem="OHS-l4-MNO" secondAttribute="trailing" constant="40" id="h5o-eU-HIW"/>
+                            <constraint firstItem="OHS-l4-MNO" firstAttribute="leading" secondItem="RnS-Yd-ncX" secondAttribute="leading" constant="40" id="tsS-J5-FDL"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="RnS-Yd-ncX"/>
                     </view>
+                    <connections>
+                        <outlet property="googleMap" destination="vhy-wl-Lvs" id="vdq-xV-IRa"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iKL-kH-shD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
