--- a/MockupProjetoFinal/View/Base.lproj/Main.storyboard
+++ b/MockupProjetoFinal/View/Base.lproj/Main.storyboard
@@ -382,78 +382,40 @@
                     <navigationItem key="navigationItem" id="oM8-zm-oIk"/>
                     <connections>
                         <outlet property="webView" destination="i2J-l2-2JG" id="vhe-05-K1r"/>
-                        <segue destination="pPe-p8-uTg" kind="showDetail" identifier="popover" id="Clo-cg-COr"/>
+                        <segue destination="2h2-Af-pFa" kind="show" identifier="popover" id="5J2-nG-REN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6qN-0T-zbc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3852" y="1730.2848575712146"/>
         </scene>
-        <!--Informaçöes-->
-        <scene sceneID="nne-Bl-itU">
+        <!--Pop Over View Controller-->
+        <scene sceneID="Hgw-AZ-Nmk">
             <objects>
-                <viewController title="Informaçöes" id="pPe-p8-uTg" customClass="PopOverViewController" customModule="MockupProjetoFinal" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="6mK-lU-KZw">
+                <tableViewController id="2h2-Af-pFa" customClass="PopOverViewController" customModule="MockupProjetoFinal" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="ric-4u-u3R">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ijq-uP-Fme">
-                                <rect key="frame" x="0.0" y="60" width="355" height="567"/>
-                                <subviews>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hGX-v4-pSK">
-                                        <rect key="frame" x="0.0" y="0.0" width="355" height="411"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <prototypes>
-                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="pmt-hB-EW8">
-                                                <rect key="frame" x="0.0" y="28" width="355" height="44"/>
-                                                <autoresizingMask key="autoresizingMask"/>
-                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="pmt-hB-EW8" id="jZT-r2-OUa">
-                                                    <rect key="frame" x="0.0" y="0.0" width="355" height="43.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                </tableViewCellContentView>
-                                            </tableViewCell>
-                                        </prototypes>
-                                    </tableView>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HHs-65-ugc">
-                                        <rect key="frame" x="154" y="521" width="46" height="30"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <state key="normal" title="Voltar"/>
-                                        <connections>
-                                            <action selector="closePopup:" destination="pPe-p8-uTg" eventType="touchUpInside" id="tga-1K-Poj"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstItem="hGX-v4-pSK" firstAttribute="leading" secondItem="ijq-uP-Fme" secondAttribute="leading" id="39Y-8C-2Pr"/>
-                                    <constraint firstItem="hGX-v4-pSK" firstAttribute="top" secondItem="ijq-uP-Fme" secondAttribute="top" id="PIo-aR-Lle"/>
-                                    <constraint firstAttribute="bottom" secondItem="hGX-v4-pSK" secondAttribute="bottom" id="gOD-TQ-KNz"/>
-                                    <constraint firstAttribute="trailing" secondItem="hGX-v4-pSK" secondAttribute="trailing" id="oF4-3s-Uy6"/>
-                                </constraints>
-                            </view>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="ijq-uP-Fme" firstAttribute="top" secondItem="9JV-ja-VCI" secondAttribute="top" id="3Fr-0y-SQh"/>
-                            <constraint firstItem="ijq-uP-Fme" firstAttribute="leading" secondItem="9JV-ja-VCI" secondAttribute="leading" constant="20" id="53I-2g-uiU"/>
-                            <constraint firstItem="ijq-uP-Fme" firstAttribute="leading" secondItem="9JV-ja-VCI" secondAttribute="leading" id="BOc-W0-tF7"/>
-                            <constraint firstItem="ijq-uP-Fme" firstAttribute="bottom" secondItem="9JV-ja-VCI" secondAttribute="bottom" id="DLV-fW-eqO"/>
-                            <constraint firstItem="9JV-ja-VCI" firstAttribute="bottom" secondItem="ijq-uP-Fme" secondAttribute="bottom" constant="40" id="cdq-1S-oev"/>
-                            <constraint firstItem="ijq-uP-Fme" firstAttribute="trailing" secondItem="9JV-ja-VCI" secondAttribute="trailing" id="lI0-UF-WK8"/>
-                            <constraint firstItem="9JV-ja-VCI" firstAttribute="trailing" secondItem="ijq-uP-Fme" secondAttribute="trailing" constant="20" id="xUJ-jh-df1"/>
-                            <constraint firstItem="ijq-uP-Fme" firstAttribute="top" secondItem="9JV-ja-VCI" secondAttribute="top" constant="40" id="y3T-9R-MLj"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="9JV-ja-VCI"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="SHy-kd-7Jz"/>
-                    <connections>
-                        <outlet property="Popupview" destination="ijq-uP-Fme" id="ULd-H4-Jvr"/>
-                        <outlet property="tableView" destination="hGX-v4-pSK" id="azW-Po-YBo"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="po1-GA-8be" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="QO2-IA-fVf">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="QO2-IA-fVf" id="IYA-en-jcH">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="2h2-Af-pFa" id="dkd-J8-pOk"/>
+                            <outlet property="delegate" destination="2h2-Af-pFa" id="QRc-u7-crw"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="M7r-yA-xS2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5716" y="1539.5802098950526"/>
+            <point key="canvasLocation" x="4790" y="1731"/>
         </scene>
         <!--Deliveries Table View Controller-->
         <scene sceneID="1Ph-AU-deR">
@@ -1260,7 +1222,7 @@
                                         <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="sq0-wY-ff9">
                                             <rect key="frame" x="20" y="20" width="96" height="96"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RI7-5G-TR1">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RI7-5G-TR1">
                                                     <rect key="frame" x="0.0" y="0.0" width="120" height="82"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="120" id="77C-Zl-hUS"/>
@@ -1335,7 +1297,6 @@
                                     <outlet property="productImage" destination="RI7-5G-TR1" id="VTV-PJ-xSS"/>
                                     <outlet property="productPrice" destination="wJg-5E-OCQ" id="izV-6B-d4d"/>
                                     <outlet property="productTitle" destination="IbH-dY-bbt" id="Jna-lw-W7O"/>
-                                    <segue destination="L2g-2e-isq" kind="show" identifier="viewBatch" id="wMc-Lt-l2q"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -1361,6 +1322,9 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" id="784-HT-3d4"/>
+                    <connections>
+                        <segue destination="L2g-2e-isq" kind="show" identifier="viewBatch" id="XxF-2q-TOY"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hr5-Zp-3SN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -1555,7 +1519,6 @@
         <image name="truck.png" width="24" height="24"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="NJu-vK-TWe"/>
         <segue reference="JVz-ro-u23"/>
         <segue reference="vY8-gJ-MhK"/>
     </inferredMetricsTieBreakers>
