--- a/MockupProjetoFinal/View/Base.lproj/Main.storyboard
+++ b/MockupProjetoFinal/View/Base.lproj/Main.storyboard
@@ -14,11 +14,11 @@
         <scene sceneID="YLV-zD-cSh">
             <objects>
                 <viewController id="JIO-IA-uMF" customClass="RegistrationViewController" customModule="MockupProjetoFinal" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" ambiguous="YES" id="k2h-RH-ZBq">
+                    <view key="view" contentMode="scaleToFill" id="k2h-RH-ZBq">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="1200"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qk2-eO-scz">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" translatesAutoresizingMaskIntoConstraints="NO" id="Qk2-eO-scz">
                                 <rect key="frame" x="0.0" y="20" width="375" height="1180"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="center" misplaced="YES" axis="vertical" distribution="fillEqually" spacing="64" translatesAutoresizingMaskIntoConstraints="NO" id="HZ5-5j-Yyq">
